--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
         "express": "^4.17.0",
         "http": "0.0.0",
         "https": "^1.0.0",
+        "jquery": "^3.4.1",
+        "metro4": "^4.2.43",
         "ng-animate": "^0.3.4",
         "rxjs": "~6.3.3",
         "tslib": "^1.9.0",
