--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@angular/platform-browser": "~7.2.0",
         "@angular/platform-browser-dynamic": "~7.2.0",
         "@angular/router": "~7.2.0",
+        "angular-instafeed": "^1.8.3",
         "core-js": "^2.5.4",
         "ejs": "^2.6.1",
         "express": "^4.17.0",
