--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "jquery": "^3.4.1",
         "metro4": "^4.2.43",
         "ng-animate": "^0.3.4",
+        "ng-recaptcha": "^4.3.0",
         "rxjs": "~6.3.3",
         "tslib": "^1.9.0",
         "zone.js": "~0.8.26"
