--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
-              "node_modules/metro4/build/js/metro.js"
+              "node_modules/metro4/build/js/metro.js",
+              "src/assets/js/swfobject.js"
             ],
             "es5BrowserSupport": true
           },
