--- a/package.json
+++ b/package.json
@@ -52,13 +52,14 @@
         "metro4": "^4.2.43",
         "ng-animate": "^0.3.4",
         "ng-recaptcha": "^4.3.0",
+        "nw-swfobject": "^2.3.1",
         "rxjs": "~6.3.3",
         "tslib": "^1.9.0",
         "zone.js": "~0.8.26"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.13.0",
-        "@angular/cli": "~7.3.9",
+        "@angular/cli": "^7.3.9",
         "@angular/compiler-cli": "~7.2.0",
         "@angular/language-service": "~7.2.0",
         "@types/jasmine": "~2.8.8",
