--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/web.config"
+              "src/web.config",
+              "src/swf"
             ],
             "styles": [
               "node_modules/metro4/build/css/metro-all.css",
